--- a/CustomFitProject/requirements.txt
+++ b/CustomFitProject/requirements.txt
@@ -2,10 +2,14 @@ asgiref==3.8.1
 dj-rest-auth==6.0.0
 Django==5.0.7
 django-allauth==0.63.6
+django-cors-headers==4.4.0
+django-environ==0.11.2
+django-filter==24.2
 djangorestframework==3.15.2
+gunicorn==22.0.0
+packaging==24.1
+pillow==10.3.0
 sqlparse==0.5.0
 typing_extensions==4.12.2
 tzdata==2024.1
-django-filter==24.2
-pillow==10.3.0
-django-cors-headers==4.4.0
+whitenoise==6.7.0
